{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 124,
  "lineage": "468a6734-7fe1-cb64-73c8-f660a5d24700",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "movie-back-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3030",
                  "3000",
                  "3306"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-06-10T21:55:39.528-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/movie-a1-terraform1111/global/firewalls/movie-back-firewall",
            "log_config": [],
            "name": "movie-back-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
            "priority": 1000,
            "project": "movie-a1-terraform1111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/firewalls/movie-back-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "web"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "movie-a1-terraform111-movie-back-firewall"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "movie-db-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3030",
                  "3000",
                  "3306"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-06-10T21:55:39.541-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/movie-a1-terraform1111/global/firewalls/movie-db-firewall",
            "log_config": [],
            "name": "movie-db-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
            "priority": 1000,
            "project": "movie-a1-terraform1111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/firewalls/movie-db-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "web"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "movie-a1-terraform111-movie-db-firewall"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "movie-front-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "22",
                  "3030",
                  "3000",
                  "1000-2000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-06-10T21:55:39.569-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/movie-a1-terraform1111/global/firewalls/movie-front-firewall",
            "log_config": [],
            "name": "movie-front-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
            "priority": 1000,
            "project": "movie-a1-terraform1111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/firewalls/movie-front-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "web"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "movie-a1-terraform111-movie-front-firewall"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230509",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/zones/us-central1-a/disks/vm-movie-a1-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/movie-a1-terraform1111/zones/us-central1-a/instances/vm-movie-a1-1",
            "instance_id": "7149122059730742583",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "gi7j-mcwbOI=",
            "metadata_startup_script": "#! /bin/bash\n\nmkdir movieAnalyst \u0026\u0026 cd movieAnalyst\ntouch joan.txt\n#apt update\n#apt -y upgrade\napt install -y git\napt install -y nodejs npm\ngit clone https://github.com/juan-ruiz/movie-analyst-ui.git\n#sleep 180\ncd movie-analyst-ui\ntouch adentroPapi.txt\nsudo npm -y install\nBACK_HOST=\"10.0.1.2\" nodejs server.js",
            "name": "vm-movie-a1-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.30.128.44",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/regions/us-central1/subnetworks/subnet-movie-a1-1",
                "subnetwork_project": "movie-a1-terraform1111"
              }
            ],
            "project": "movie-a1-terraform1111",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/zones/us-central1-a/instances/vm-movie-a1-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "movie-a1-terraform111-movie-front-firewall"
            ],
            "tags_fingerprint": "xBwtFle_n80=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1",
            "google_compute_subnetwork.subnet-movie-a1-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default-back",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230509",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/zones/us-central1-a/disks/vm-movie-a1-1-back"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/movie-a1-terraform1111/zones/us-central1-a/instances/vm-movie-a1-1-back",
            "instance_id": "6843083185801719095",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "startup-script": "#! /bin/bash\n\nmkdir movieAnalyst \u0026\u0026 cd movieAnalyst\ntouch BACKjoan.txt\napt install -y git\napt install -y nodejs npm\ngit clone https://github.com/juan-ruiz/movie-analyst-api.git\ncd movie-analyst-api\ntouch adentroPapi.txt\nsudo npm -y install\nsudo apt install mariadb-server\n#PORT=3000 nodejs server.js\n"
            },
            "metadata_fingerprint": "ZwACp49O1YQ=",
            "name": "vm-movie-a1-1-back",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/regions/us-central1/subnetworks/subnet-movie-a1-1-back",
                "subnetwork_project": "movie-a1-terraform1111"
              }
            ],
            "project": "movie-a1-terraform1111",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/zones/us-central1-a/instances/vm-movie-a1-1-back",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "movie-a1-terraform111-movie-back-firewall"
            ],
            "tags_fingerprint": "vyIm4cyWo3E=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1",
            "google_compute_subnetwork.subnet-movie-a1-1-back"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230509",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/zones/us-central1-a/disks/vm-movie-a1-1-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/movie-a1-terraform1111/zones/us-central1-a/instances/vm-movie-a1-1-db",
            "instance_id": "8671745312566078775",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "startup-script": "#! /bin/bash\napt update\napt upgrade\nmkdir movieAnalystDB \u0026\u0026 cd movieAnalystDB\ntouch DBjoan.txt\n#apt install -y git\n#apt install -y nodejs npm\n#Pendiente revisar la configuracion de la instancia de datos.\n\n#Instalacion MySql\napt install -y mariadb-server\ngsutil cp gs://movie-analyst-bucket-standar01/table.sql .\nmysql -u root \u003c table.sql \n#importar datos o verificar ubicacion\n#crear base de datos\n#pushear el sql file"
            },
            "metadata_fingerprint": "ystN2tz3TXI=",
            "name": "vm-movie-a1-1-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.132.126.229",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/regions/us-central1/subnetworks/subnet-movie-a1-1-db",
                "subnetwork_project": "movie-a1-terraform1111"
              }
            ],
            "project": "movie-a1-terraform1111",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/zones/us-central1-a/instances/vm-movie-a1-1-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "movie-a1-terraform111-movie-db-firewall"
            ],
            "tags_fingerprint": "Wk9jDApExJw=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1",
            "google_compute_subnetwork.subnet-movie-a1-1-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-movie-a1-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
            "mtu": 0,
            "name": "vpc-movie-a1-1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "movie-a1-terraform1111",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "movie-router-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-10T21:55:39.696-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/movie-a1-terraform1111/regions/us-central1/routers/movie-router-1",
            "name": "movie-router-1",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
            "project": "movie-a1-terraform1111",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/regions/us-central1/routers/movie-router-1"
          },
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "movie-nat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "movie-a1-terraform1111/us-central1/movie-router-1/my-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "movie-a1-terraform1111",
            "region": "us-central1",
            "router": "movie-router-1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1",
            "google_compute_router.movie-router-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-movie-a1-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-10T21:55:39.786-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/movie-a1-terraform1111/regions/us-central1/subnetworks/subnet-movie-a1-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-movie-a1-1",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "movie-a1-terraform1111",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/regions/us-central1/subnetworks/subnet-movie-a1-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-movie-a1-1-back",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-10T21:55:39.858-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/movie-a1-terraform1111/regions/us-central1/subnetworks/subnet-movie-a1-1-back",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-movie-a1-1-back",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "movie-a1-terraform1111",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/regions/us-central1/subnetworks/subnet-movie-a1-1-back",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-movie-a1-1-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-10T21:55:40.184-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/movie-a1-terraform1111/regions/us-central1/subnetworks/subnet-movie-a1-1-db",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subnet-movie-a1-1-db",
            "network": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/global/networks/vpc-movie-a1-1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "movie-a1-terraform1111",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/movie-a1-terraform1111/regions/us-central1/subnetworks/subnet-movie-a1-1-db",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-movie-a1-1"
          ]
        }
      ]
    }
  ]
}